// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdminUsers /> should render correctly - index 1`] = `
<div>
  <div
    aria-label="Loading"
    class="sc-ilhmMj dutEnW page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-idXgbr irOVYZ"
    >
      <div
        class="sc-dIfARi hEqwgc"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-idXgbr hApKDz"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-dIfARi hEqwgc"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-idXgbr hApKDz"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-dIfARi hEqwgc"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-idXgbr hApKDz"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-dIfARi hEqwgc"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-idXgbr hApKDz"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-dIfARi hEqwgc"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with admin user 1`] = `
<div>
  <div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <div
        class="sc-kDvujY bJLGdG"
      >
        <a
          class="sc-gswNZR bbFtvE"
          href="/admin"
        >
          <span
            class="sc-ftTHYK cRFGYD"
          >
            ⇠ Admin
          </span>
        </a>
      </div>
    </div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-eDvSVe fsBEuM sc-jrcTuL jiMlto"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div
    class="stackstyles__StyledHStack-sc-1m733wj-1 fnxnys"
  >
    <button
      class="sc-kgTSHT bVHzyr outer"
      type="button"
    >
      <span
        class="sc-bBABsx fsRcPl"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-kgTSHT bVHzyr outer"
      type="button"
    >
      <span
        class="sc-bBABsx fsRcPl"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 ibcJJP"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dCCVPP"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 dmknRP"
      >
        <div
          class="sc-gikAfH dTPGls"
        >
          <div
            class="sc-ezOQGI kvCBJt"
          />
          <div
            class="sc-bYMpWt dhEwtI"
          >
            <div
              class="split-detail-itemstyles__Item-sc-5gess9-0 eDQpMP"
            >
              <div
                class="sc-hBxehG julUME"
              >
                <h1
                  class="sc-gKPRtg jJVvWo sc-bjfHbI iYWdbA"
                  id="new-+"
                >
                  New +
                </h1>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with createError 1`] = `
<div>
  <div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <div
        class="sc-kDvujY bJLGdG"
      >
        <a
          class="sc-gswNZR bbFtvE"
          href="/admin"
        >
          <span
            class="sc-ftTHYK cRFGYD"
          >
            ⇠ Admin
          </span>
        </a>
      </div>
    </div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-eDvSVe fsBEuM sc-jrcTuL jiMlto"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div
    class="stackstyles__StyledHStack-sc-1m733wj-1 fnxnys"
  >
    <button
      class="sc-kgTSHT bVHzyr outer"
      type="button"
    >
      <span
        class="sc-bBABsx fsRcPl"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-kgTSHT bVHzyr outer"
      type="button"
    >
      <span
        class="sc-bBABsx fsRcPl"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 ibcJJP"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dCCVPP"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 dmknRP"
      >
        <div
          class="sc-gikAfH dTPGls"
        >
          <div
            class="sc-ezOQGI kvCBJt"
          />
          <div
            class="sc-bYMpWt dhEwtI"
          >
            <div
              class="split-detail-itemstyles__Item-sc-5gess9-0 eDQpMP"
            >
              <div
                class="sc-hBxehG julUME"
              >
                <h1
                  class="sc-gKPRtg jJVvWo sc-bjfHbI iYWdbA"
                  id="new-+"
                >
                  New +
                </h1>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with creating=true 1`] = `
<div>
  <div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <div
        class="sc-kDvujY bJLGdG"
      >
        <a
          class="sc-gswNZR bbFtvE"
          href="/admin"
        >
          <span
            class="sc-ftTHYK cRFGYD"
          >
            ⇠ Admin
          </span>
        </a>
      </div>
    </div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-eDvSVe fsBEuM sc-jrcTuL jiMlto"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div
    class="stackstyles__StyledHStack-sc-1m733wj-1 fnxnys"
  >
    <button
      class="sc-kgTSHT bVHzyr outer"
      type="button"
    >
      <span
        class="sc-bBABsx fsRcPl"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-kgTSHT bVHzyr outer"
      type="button"
    >
      <span
        class="sc-bBABsx fsRcPl"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 ibcJJP"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dCCVPP"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 dmknRP"
      >
        <div
          class="sc-gikAfH dTPGls"
        >
          <div
            class="sc-ezOQGI kvCBJt"
          />
          <div
            class="sc-bYMpWt dhEwtI"
          >
            <div
              class="split-detail-itemstyles__Item-sc-5gess9-0 eDQpMP"
            >
              <div
                class="sc-hBxehG julUME"
              >
                <h1
                  class="sc-gKPRtg jJVvWo sc-bjfHbI iYWdbA"
                  id="new-+"
                >
                  New +
                </h1>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with initial state 1`] = `
<div>
  <div
    aria-label="Loading"
    class="sc-ilhmMj dutEnW page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-idXgbr irOVYZ"
    >
      <div
        class="sc-dIfARi hEqwgc"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-idXgbr hApKDz"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-dIfARi hEqwgc"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-idXgbr hApKDz"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-dIfARi hEqwgc"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-idXgbr hApKDz"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-dIfARi hEqwgc"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-idXgbr hApKDz"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-dIfARi hEqwgc"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with loadError 1`] = `
<div>
  <div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <div
        class="sc-kDvujY bJLGdG"
      >
        <a
          class="sc-gswNZR bbFtvE"
          href="/admin"
        >
          <span
            class="sc-ftTHYK cRFGYD"
          >
            ⇠ Admin
          </span>
        </a>
      </div>
    </div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-eDvSVe fsBEuM sc-jrcTuL jiMlto"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div
    class="stackstyles__StyledHStack-sc-1m733wj-1 fnxnys"
  >
    <button
      class="sc-kgTSHT bVHzyr outer"
      type="button"
    >
      <span
        class="sc-bBABsx fsRcPl"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-kgTSHT bVHzyr outer"
      type="button"
    >
      <span
        class="sc-bBABsx fsRcPl"
      >
        Show filters
      </span>
    </button>
  </div>
  <span
    class="sc-kMjNwy cyunjC"
  >
    <span
      class="sc-AHaJN hrLlWK"
    >
      Could not load users
      <br />
      Something went wrong
    </span>
  </span>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 ibcJJP"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dCCVPP"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 dmknRP"
      >
        <div
          class="sc-gikAfH dTPGls"
        >
          <div
            class="sc-ezOQGI kvCBJt"
          />
          <div
            class="sc-bYMpWt dhEwtI"
          >
            <div
              class="split-detail-itemstyles__Item-sc-5gess9-0 eDQpMP"
            >
              <div
                class="sc-hBxehG julUME"
              >
                <h1
                  class="sc-gKPRtg jJVvWo sc-bjfHbI iYWdbA"
                  id="new-+"
                >
                  New +
                </h1>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with loading=true 1`] = `
<div>
  <div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <div
        class="sc-kDvujY bJLGdG"
      >
        <a
          class="sc-gswNZR bbFtvE"
          href="/admin"
        >
          <span
            class="sc-ftTHYK cRFGYD"
          >
            ⇠ Admin
          </span>
        </a>
      </div>
    </div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-eDvSVe fsBEuM sc-jrcTuL jiMlto"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div
    class="stackstyles__StyledHStack-sc-1m733wj-1 fnxnys"
  >
    <button
      class="sc-kgTSHT kfSbgz outer"
      disabled=""
      type="button"
    >
      <span
        class="sc-bBABsx kGAFze"
      >
        Reload users
      </span>
      <div
        aria-hidden="true"
        class="sc-iveFHk fcnnul"
      >
        <div
          class="sc-hHTYSt faOWmX"
        >
          <div
            class="sc-dmctIk cXBZJa"
          />
          <div
            class="sc-dmctIk geFBjy"
          />
          <div
            class="sc-dmctIk izRBrV"
          />
          <div
            class="sc-dmctIk jshiOg"
          />
          <div
            class="sc-dmctIk eXRsjf"
          />
          <div
            class="sc-dmctIk ktWufq"
          />
          <div
            class="sc-dmctIk dtOXNO"
          />
          <div
            class="sc-dmctIk cQoAua"
          />
        </div>
      </div>
    </button>
    <button
      class="sc-kgTSHT bVHzyr outer"
      type="button"
    >
      <span
        class="sc-bBABsx fsRcPl"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 ibcJJP"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dCCVPP"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 dmknRP"
      >
        <div
          class="sc-gikAfH dTPGls"
        >
          <div
            class="sc-ezOQGI kvCBJt"
          />
          <div
            class="sc-bYMpWt dhEwtI"
          >
            <div
              class="split-detail-itemstyles__Item-sc-5gess9-0 eDQpMP"
            >
              <div
                class="sc-hBxehG julUME"
              >
                <h1
                  class="sc-gKPRtg jJVvWo sc-bjfHbI iYWdbA"
                  id="new-+"
                >
                  New +
                </h1>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with removeError 1`] = `
<div>
  <div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <div
        class="sc-kDvujY bJLGdG"
      >
        <a
          class="sc-gswNZR bbFtvE"
          href="/admin"
        >
          <span
            class="sc-ftTHYK cRFGYD"
          >
            ⇠ Admin
          </span>
        </a>
      </div>
    </div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-eDvSVe fsBEuM sc-jrcTuL jiMlto"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div
    class="stackstyles__StyledHStack-sc-1m733wj-1 fnxnys"
  >
    <button
      class="sc-kgTSHT bVHzyr outer"
      type="button"
    >
      <span
        class="sc-bBABsx fsRcPl"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-kgTSHT bVHzyr outer"
      type="button"
    >
      <span
        class="sc-bBABsx fsRcPl"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 ibcJJP"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dCCVPP"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 dmknRP"
      >
        <div
          class="sc-gikAfH dTPGls"
        >
          <div
            class="sc-ezOQGI kvCBJt"
          />
          <div
            class="sc-bYMpWt dhEwtI"
          >
            <div
              class="split-detail-itemstyles__Item-sc-5gess9-0 eDQpMP"
            >
              <div
                class="sc-hBxehG julUME"
              >
                <h1
                  class="sc-gKPRtg jJVvWo sc-bjfHbI iYWdbA"
                  id="new-+"
                >
                  New +
                </h1>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with removing=true 1`] = `
<div>
  <div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <div
        class="sc-kDvujY bJLGdG"
      >
        <a
          class="sc-gswNZR bbFtvE"
          href="/admin"
        >
          <span
            class="sc-ftTHYK cRFGYD"
          >
            ⇠ Admin
          </span>
        </a>
      </div>
    </div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-eDvSVe fsBEuM sc-jrcTuL jiMlto"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div
    class="stackstyles__StyledHStack-sc-1m733wj-1 fnxnys"
  >
    <button
      class="sc-kgTSHT bVHzyr outer"
      type="button"
    >
      <span
        class="sc-bBABsx fsRcPl"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-kgTSHT bVHzyr outer"
      type="button"
    >
      <span
        class="sc-bBABsx fsRcPl"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 ibcJJP"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dCCVPP"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 dmknRP"
      >
        <div
          class="sc-gikAfH dTPGls"
        >
          <div
            class="sc-ezOQGI kvCBJt"
          />
          <div
            class="sc-bYMpWt dhEwtI"
          >
            <div
              class="split-detail-itemstyles__Item-sc-5gess9-0 eDQpMP"
            >
              <div
                class="sc-hBxehG julUME"
              >
                <h1
                  class="sc-gKPRtg jJVvWo sc-bjfHbI iYWdbA"
                  id="new-+"
                >
                  New +
                </h1>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with requestError 1`] = `
<div>
  <div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <div
        class="sc-kDvujY bJLGdG"
      >
        <a
          class="sc-gswNZR bbFtvE"
          href="/admin"
        >
          <span
            class="sc-ftTHYK cRFGYD"
          >
            ⇠ Admin
          </span>
        </a>
      </div>
    </div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-eDvSVe fsBEuM sc-jrcTuL jiMlto"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div
    class="stackstyles__StyledHStack-sc-1m733wj-1 fnxnys"
  >
    <button
      class="sc-kgTSHT bVHzyr outer"
      type="button"
    >
      <span
        class="sc-bBABsx fsRcPl"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-kgTSHT bVHzyr outer"
      type="button"
    >
      <span
        class="sc-bBABsx fsRcPl"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 ibcJJP"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dCCVPP"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 dmknRP"
      >
        <div
          class="sc-gikAfH dTPGls"
        >
          <div
            class="sc-ezOQGI kvCBJt"
          />
          <div
            class="sc-bYMpWt dhEwtI"
          >
            <div
              class="split-detail-itemstyles__Item-sc-5gess9-0 eDQpMP"
            >
              <div
                class="sc-hBxehG julUME"
              >
                <h1
                  class="sc-gKPRtg jJVvWo sc-bjfHbI iYWdbA"
                  id="new-+"
                >
                  New +
                </h1>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with requesting=true 1`] = `
<div>
  <div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <div
        class="sc-kDvujY bJLGdG"
      >
        <a
          class="sc-gswNZR bbFtvE"
          href="/admin"
        >
          <span
            class="sc-ftTHYK cRFGYD"
          >
            ⇠ Admin
          </span>
        </a>
      </div>
    </div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-eDvSVe fsBEuM sc-jrcTuL jiMlto"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div
    class="stackstyles__StyledHStack-sc-1m733wj-1 fnxnys"
  >
    <button
      class="sc-kgTSHT bVHzyr outer"
      type="button"
    >
      <span
        class="sc-bBABsx fsRcPl"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-kgTSHT bVHzyr outer"
      type="button"
    >
      <span
        class="sc-bBABsx fsRcPl"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 ibcJJP"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dCCVPP"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 dmknRP"
      >
        <div
          class="sc-gikAfH dTPGls"
        >
          <div
            class="sc-ezOQGI kvCBJt"
          />
          <div
            class="sc-bYMpWt dhEwtI"
          >
            <div
              class="split-detail-itemstyles__Item-sc-5gess9-0 eDQpMP"
            >
              <div
                class="sc-hBxehG julUME"
              >
                <h1
                  class="sc-gKPRtg jJVvWo sc-bjfHbI iYWdbA"
                  id="new-+"
                >
                  New +
                </h1>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with updateError 1`] = `
<div>
  <div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <div
        class="sc-kDvujY bJLGdG"
      >
        <a
          class="sc-gswNZR bbFtvE"
          href="/admin"
        >
          <span
            class="sc-ftTHYK cRFGYD"
          >
            ⇠ Admin
          </span>
        </a>
      </div>
    </div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-eDvSVe fsBEuM sc-jrcTuL jiMlto"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div
    class="stackstyles__StyledHStack-sc-1m733wj-1 fnxnys"
  >
    <button
      class="sc-kgTSHT bVHzyr outer"
      type="button"
    >
      <span
        class="sc-bBABsx fsRcPl"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-kgTSHT bVHzyr outer"
      type="button"
    >
      <span
        class="sc-bBABsx fsRcPl"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 ibcJJP"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dCCVPP"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 dmknRP"
      >
        <div
          class="sc-gikAfH dTPGls"
        >
          <div
            class="sc-ezOQGI kvCBJt"
          />
          <div
            class="sc-bYMpWt dhEwtI"
          >
            <div
              class="split-detail-itemstyles__Item-sc-5gess9-0 eDQpMP"
            >
              <div
                class="sc-hBxehG julUME"
              >
                <h1
                  class="sc-gKPRtg jJVvWo sc-bjfHbI iYWdbA"
                  id="new-+"
                >
                  New +
                </h1>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with updating=true 1`] = `
<div>
  <div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <div
        class="sc-kDvujY bJLGdG"
      >
        <a
          class="sc-gswNZR bbFtvE"
          href="/admin"
        >
          <span
            class="sc-ftTHYK cRFGYD"
          >
            ⇠ Admin
          </span>
        </a>
      </div>
    </div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-eDvSVe fsBEuM sc-jrcTuL jiMlto"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div
    class="stackstyles__StyledHStack-sc-1m733wj-1 fnxnys"
  >
    <button
      class="sc-kgTSHT bVHzyr outer"
      type="button"
    >
      <span
        class="sc-bBABsx fsRcPl"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-kgTSHT bVHzyr outer"
      type="button"
    >
      <span
        class="sc-bBABsx fsRcPl"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 ibcJJP"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dCCVPP"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 dmknRP"
      >
        <div
          class="sc-gikAfH dTPGls"
        >
          <div
            class="sc-ezOQGI kvCBJt"
          />
          <div
            class="sc-bYMpWt dhEwtI"
          >
            <div
              class="split-detail-itemstyles__Item-sc-5gess9-0 eDQpMP"
            >
              <div
                class="sc-hBxehG julUME"
              >
                <h1
                  class="sc-gKPRtg jJVvWo sc-bjfHbI iYWdbA"
                  id="new-+"
                >
                  New +
                </h1>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with user 1`] = `
<div>
  <div
    class="sc-hBxehG julUME"
  >
    <h1
      class="sc-jSUZER glQaLI sc-bjfHbI cBkNPA"
      id="admin-only"
    >
      Admin only
    </h1>
    <span
      class="sc-kMjNwy cyunjC"
    >
      You need to be logged in with an admin account to view this content.
      <br />
      <a
        class="sc-gswNZR bbFtvE"
        href="/login"
      >
        <span
          class="sc-ftTHYK cRFGYD"
        >
          Got a different admin account? Log in here.
        </span>
      </a>
    </span>
  </div>
</div>
`;

exports[`<AdminUsers /> should render correctly with users 1`] = `
<div>
  <div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <div
        class="sc-kDvujY bJLGdG"
      >
        <a
          class="sc-gswNZR bbFtvE"
          href="/admin"
        >
          <span
            class="sc-ftTHYK cRFGYD"
          >
            ⇠ Admin
          </span>
        </a>
      </div>
    </div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-eDvSVe fsBEuM sc-jrcTuL jiMlto"
      >
        Admin users
      </h1>
    </div>
  </div>
  <div
    class="stackstyles__StyledHStack-sc-1m733wj-1 fnxnys"
  >
    <button
      class="sc-kgTSHT bVHzyr outer"
      type="button"
    >
      <span
        class="sc-bBABsx fsRcPl"
      >
        Reload users
      </span>
    </button>
    <button
      class="sc-kgTSHT bVHzyr outer"
      type="button"
    >
      <span
        class="sc-bBABsx fsRcPl"
      >
        Show filters
      </span>
    </button>
  </div>
  <span
    class="sc-kMjNwy cyunjC admin-usersstyles__Count-sc-1qwrqg1-0 cmWvHQ"
  >
    Showing 
    3
     of 
    3
     users
  </span>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 ibcJJP"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dCCVPP"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 dmknRP"
      >
        <div
          class="sc-gikAfH dTPGls"
        >
          <div
            class="sc-ezOQGI kvCBJt"
          />
          <div
            class="sc-bYMpWt dhEwtI"
          >
            <div
              class="split-detail-itemstyles__Item-sc-5gess9-0 eDQpMP"
            >
              <div
                class="sc-hBxehG julUME"
              >
                <h1
                  class="sc-gKPRtg jJVvWo sc-bjfHbI iYWdbA"
                  id="new-+"
                >
                  New +
                </h1>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sc-gikAfH dTPGls"
        >
          <div
            class="sc-ezOQGI kvCBJt"
          />
          <div
            class="sc-bYMpWt dhEwtI"
          >
            <div
              class="split-detail-itemstyles__Item-sc-5gess9-0 eDQpMP"
            >
              <div
                class="sc-hBxehG julUME"
              >
                <h1
                  class="sc-gKPRtg jJVvWo sc-bjfHbI iYWdbA"
                  id="name"
                >
                  name
                </h1>
                <span
                  class="sc-kMjNwy cyunjC"
                >
                  <br />
                  id: 
                  1
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sc-gikAfH dTPGls"
        >
          <div
            class="sc-ezOQGI kvCBJt"
          />
          <div
            class="sc-bYMpWt dhEwtI"
          >
            <div
              class="split-detail-itemstyles__Item-sc-5gess9-0 eDQpMP"
            >
              <div
                class="sc-hBxehG julUME"
              >
                <h1
                  class="sc-gKPRtg jJVvWo sc-bjfHbI iYWdbA"
                  id="another"
                >
                  another
                </h1>
                <span
                  class="sc-kMjNwy cyunjC"
                >
                  <br />
                  id: 
                  2
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sc-gikAfH dTPGls"
        >
          <div
            class="sc-ezOQGI kvCBJt"
          />
          <div
            class="sc-bYMpWt dhEwtI"
          >
            <div
              class="split-detail-itemstyles__Item-sc-5gess9-0 eDQpMP"
            >
              <div
                class="sc-hBxehG julUME"
              >
                <h1
                  class="sc-gKPRtg jJVvWo sc-bjfHbI iYWdbA"
                  id="a-third"
                >
                  a third
                </h1>
                <span
                  class="sc-kMjNwy cyunjC"
                >
                  <br />
                  id: 
                  3
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
